<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background">

    <ImageView
            android:id="@+id/img_buy_stock"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/browse"
            />
    <LinearLayout android:id="@+id/buy_txt"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingLeft="20dp"
                  android:orientation="horizontal">

        <TextView
                android:id="@+id/stock_exchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="25sp"/>
        <TextView
                android:id="@+id/stock_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="25sp"/>
        <TextView
                android:id="@+id/stock_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="25sp"/>
    </LinearLayout>

    <Button android:id="@+id/add_update_aip"
            android:layout_width="fill_parent"
            android:layout_gravity="center"
            android:layout_height="55dp"
            android:text="@string/add_update_aip"
            android:paddingTop="10dp"
            android:textSize="20sp">
    </Button>

    <Button android:id="@+id/one_time_buy"
            android:layout_width="fill_parent"
            android:layout_gravity="center"
            android:layout_height="55dp"
            android:text="@string/one_time_buy"
            android:paddingTop="10dp"
            android:textSize="20sp">
    </Button>

    <Button android:id="@+id/remove_aip"
            android:layout_width="fill_parent"
            android:layout_gravity="center"
            android:layout_height="55dp"
            android:text="@string/delete_aip"
            android:paddingTop="10dp"
            android:textSize="20sp">
    </Button>

</LinearLayout>