<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/startup"
                tools:context=".MainActivity" >

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/login_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="50dp"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
            android:id="@+id/edit_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_marginLeft="32dp"
            android:layout_toRightOf="@+id/textView2"
            android:inputType="textEmailAddress"
            android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="38dp"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignLeft="@+id/edit_username"
            android:ems="10"
            android:inputType="textPassword" />

    <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="94dp"
            android:onClick="doLogin"
            android:text="@string/Login" />


</RelativeLayout>